[gd_scene load_steps=24 format=3 uid="uid://cyesp2fngpjbj"]

[ext_resource type="Script" path="res://Scenes/first.gd" id="1_qyulj"]
[ext_resource type="Texture2D" uid="uid://i3ph74i10bxa" path="res://sprites/pixel_ground.png" id="2_g1i0o"]
[ext_resource type="Texture2D" uid="uid://c662x1ur5uixi" path="res://sprites/gold-ore.png" id="2_vvn7b"]
[ext_resource type="Texture2D" uid="uid://r3s1w5nfspbr" path="res://sprites/hand.png" id="3_h17m5"]
[ext_resource type="Texture2D" uid="uid://b283k4s6x2t2a" path="res://sprites/cursor.png" id="3_w8fyv"]
[ext_resource type="Texture2D" uid="uid://emc05tekq3o4" path="res://sprites/miner.png" id="4_3nisy"]
[ext_resource type="Texture2D" uid="uid://cxxn2x3km0ylb" path="res://sprites/pickaxe.png" id="5_qgg7x"]
[ext_resource type="FontFile" uid="uid://dk447tcykk8ys" path="res://fonts/PressStart2P-Regular.ttf" id="5_wfsna"]
[ext_resource type="Texture2D" uid="uid://bw5pkdoai5api" path="res://sprites/button.png" id="6_eni0o"]
[ext_resource type="Texture2D" uid="uid://bnrdjq6f4an0u" path="res://sprites/button-hover.png" id="7_cyhpm"]
[ext_resource type="Texture2D" uid="uid://by6dexbvgehgf" path="res://sprites/button-disabled.png" id="7_h6s7i"]
[ext_resource type="Texture2D" uid="uid://dgyp6wtve1cy2" path="res://sprites/stone_mine.png" id="9_vp630"]
[ext_resource type="Texture2D" uid="uid://qrgdb5rnl21g" path="res://sprites/coal_mine.png" id="10_t5htj"]
[ext_resource type="Texture2D" uid="uid://cxbn37kp62eiu" path="res://sprites/iron_mine.png" id="11_v6fvf"]
[ext_resource type="Texture2D" uid="uid://p8acpsj8giao" path="res://sprites/gold_mine.png" id="12_y7x8c"]
[ext_resource type="Texture2D" uid="uid://fti3502icoqo" path="res://sprites/diamond_mine.png" id="13_07yjg"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rjw4j"]
texture = ExtResource("2_vvn7b")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_cnxvn"]
texture = ExtResource("2_vvn7b")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6npjh"]
texture = ExtResource("2_vvn7b")
texture_margin_top = 20.0
texture_margin_right = 10.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_yndkl"]
texture = ExtResource("6_eni0o")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_oy6cy"]
texture = ExtResource("7_cyhpm")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7x6tl"]
texture = ExtResource("7_h6s7i")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ch6sv"]
texture = ExtResource("6_eni0o")

[node name="Node" type="Node2D" groups=["Persist"]]
position = Vector2(0, -4)
script = ExtResource("1_qyulj")

[node name="Canvas" type="CanvasLayer" parent="."]

[node name="Ground" type="Sprite2D" parent="Canvas"]
position = Vector2(576, 324)
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_g1i0o")

[node name="DisplayToolsRect" type="ColorRect" parent="Canvas"]
offset_left = 456.0
offset_top = 128.0
offset_right = 832.0
offset_bottom = 640.0
color = Color(0, 0, 0, 0.211765)

[node name="ClickingRect" type="ColorRect" parent="Canvas"]
offset_left = 8.0
offset_top = 128.0
offset_right = 448.0
offset_bottom = 640.0
color = Color(0, 0, 0, 0.211765)

[node name="RichTextLabel" type="RichTextLabel" parent="Canvas/ClickingRect"]
layout_mode = 0
offset_left = 24.0
offset_top = 64.0
offset_right = 1144.0
offset_bottom = 368.0
scale = Vector2(0.35, 0.35)
theme_override_fonts/normal_font = ExtResource("5_wfsna")
theme_override_font_sizes/normal_font_size = 71
bbcode_enabled = true
fit_content = true
autowrap_mode = 0

[node name="ButtonRect" type="ColorRect" parent="Canvas/ClickingRect"]
layout_mode = 0
offset_left = 120.0
offset_top = 192.0
offset_right = 312.0
offset_bottom = 384.0
color = Color(0, 0, 0, 0.211765)

[node name="Button3" type="Button" parent="Canvas/ClickingRect"]
layout_mode = 0
offset_left = 96.0
offset_top = 168.0
offset_right = 336.0
offset_bottom = 408.0
focus_mode = 0
theme_override_styles/normal = SubResource("StyleBoxTexture_rjw4j")
theme_override_styles/hover = SubResource("StyleBoxTexture_cnxvn")
theme_override_styles/pressed = SubResource("StyleBoxTexture_6npjh")

[node name="Cursor" type="Sprite2D" parent="Canvas/ClickingRect/Button3"]
visible = false
position = Vector2(144, 120)
rotation = -0.418879
scale = Vector2(0.12, 0.12)
texture = ExtResource("3_w8fyv")

[node name="ShopRect" type="ColorRect" parent="Canvas"]
offset_left = 840.0
offset_top = 128.0
offset_right = 1152.0
offset_bottom = 640.0
color = Color(0, 0, 0, 0.211765)

[node name="RichTextLabel2" type="RichTextLabel" parent="Canvas"]
offset_left = 848.0
offset_top = 136.0
offset_right = 2107.0
offset_bottom = 307.0
scale = Vector2(0.235, 0.235)
theme_override_fonts/normal_font = ExtResource("5_wfsna")
theme_override_font_sizes/normal_font_size = 128
bbcode_enabled = true
text = "[center]SHOP[/center]"
scroll_active = false

[node name="ScrollContainer" type="ScrollContainer" parent="Canvas"]
custom_minimum_size = Vector2(63.365, 82.735)
offset_left = 848.0
offset_top = 168.0
offset_right = 1153.0
offset_bottom = 600.0
follow_focus = true
vertical_scroll_mode = 2

[node name="Control" type="Control" parent="Canvas/ScrollContainer"]
custom_minimum_size = Vector2(226.21, 1153.94)
layout_mode = 2

[node name="cursor" type="Button" parent="Canvas/ScrollContainer/Control"]
layout_mode = 2
offset_right = 296.0
offset_bottom = 64.0
focus_mode = 0
theme_override_colors/font_color = Color(0.254902, 0.690196, 0.756863, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("5_wfsna")
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = SubResource("StyleBoxTexture_yndkl")
theme_override_styles/hover = SubResource("StyleBoxTexture_oy6cy")
theme_override_styles/disabled = SubResource("StyleBoxTexture_7x6tl")
icon = ExtResource("3_w8fyv")
alignment = 0
expand_icon = true

[node name="hand" type="Button" parent="Canvas/ScrollContainer/Control"]
visible = false
layout_mode = 2
offset_top = 72.0
offset_right = 296.0
offset_bottom = 136.0
focus_mode = 0
theme_override_fonts/font = ExtResource("5_wfsna")
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = SubResource("StyleBoxTexture_ch6sv")
theme_override_styles/hover = SubResource("StyleBoxTexture_oy6cy")
theme_override_styles/disabled = SubResource("StyleBoxTexture_7x6tl")
icon = ExtResource("3_h17m5")
alignment = 0
expand_icon = true

[node name="pickaxe" type="Button" parent="Canvas/ScrollContainer/Control"]
visible = false
layout_mode = 2
offset_top = 144.0
offset_right = 296.0
offset_bottom = 208.0
focus_mode = 0
theme_override_fonts/font = ExtResource("5_wfsna")
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = SubResource("StyleBoxTexture_ch6sv")
theme_override_styles/hover = SubResource("StyleBoxTexture_oy6cy")
theme_override_styles/disabled = SubResource("StyleBoxTexture_7x6tl")
disabled = true
icon = ExtResource("5_qgg7x")
alignment = 0
expand_icon = true

[node name="miner" type="Button" parent="Canvas/ScrollContainer/Control"]
visible = false
layout_mode = 2
offset_top = 216.0
offset_right = 296.0
offset_bottom = 280.0
focus_mode = 0
theme_override_fonts/font = ExtResource("5_wfsna")
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = SubResource("StyleBoxTexture_ch6sv")
theme_override_styles/hover = SubResource("StyleBoxTexture_oy6cy")
theme_override_styles/disabled = SubResource("StyleBoxTexture_7x6tl")
icon = ExtResource("4_3nisy")
alignment = 0
expand_icon = true

[node name="drill" type="Button" parent="Canvas/ScrollContainer/Control"]
visible = false
layout_mode = 2
offset_top = 288.0
offset_right = 296.0
offset_bottom = 352.0
focus_mode = 0
theme_override_fonts/font = ExtResource("5_wfsna")
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = SubResource("StyleBoxTexture_ch6sv")
theme_override_styles/hover = SubResource("StyleBoxTexture_oy6cy")
theme_override_styles/disabled = SubResource("StyleBoxTexture_7x6tl")
alignment = 0
expand_icon = true

[node name="stone_mine" type="Button" parent="Canvas/ScrollContainer/Control"]
visible = false
layout_mode = 2
offset_top = 360.0
offset_right = 296.0
offset_bottom = 424.0
focus_mode = 0
theme_override_fonts/font = ExtResource("5_wfsna")
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = SubResource("StyleBoxTexture_ch6sv")
theme_override_styles/hover = SubResource("StyleBoxTexture_oy6cy")
theme_override_styles/disabled = SubResource("StyleBoxTexture_7x6tl")
icon = ExtResource("9_vp630")
alignment = 0
expand_icon = true

[node name="coal_mine" type="Button" parent="Canvas/ScrollContainer/Control"]
visible = false
layout_mode = 2
offset_top = 432.0
offset_right = 296.0
offset_bottom = 496.0
focus_mode = 0
theme_override_fonts/font = ExtResource("5_wfsna")
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = SubResource("StyleBoxTexture_ch6sv")
theme_override_styles/hover = SubResource("StyleBoxTexture_oy6cy")
theme_override_styles/disabled = SubResource("StyleBoxTexture_7x6tl")
icon = ExtResource("10_t5htj")
alignment = 0
expand_icon = true

[node name="iron_mine" type="Button" parent="Canvas/ScrollContainer/Control"]
visible = false
layout_mode = 2
offset_top = 504.0
offset_right = 296.0
offset_bottom = 568.0
focus_mode = 0
theme_override_fonts/font = ExtResource("5_wfsna")
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = SubResource("StyleBoxTexture_ch6sv")
theme_override_styles/hover = SubResource("StyleBoxTexture_oy6cy")
theme_override_styles/disabled = SubResource("StyleBoxTexture_7x6tl")
icon = ExtResource("11_v6fvf")
alignment = 0
expand_icon = true

[node name="gold_mine" type="Button" parent="Canvas/ScrollContainer/Control"]
visible = false
layout_mode = 2
offset_top = 576.0
offset_right = 296.0
offset_bottom = 640.0
focus_mode = 0
theme_override_fonts/font = ExtResource("5_wfsna")
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = SubResource("StyleBoxTexture_ch6sv")
theme_override_styles/hover = SubResource("StyleBoxTexture_oy6cy")
theme_override_styles/disabled = SubResource("StyleBoxTexture_7x6tl")
icon = ExtResource("12_y7x8c")
alignment = 0
expand_icon = true

[node name="diamond_mine" type="Button" parent="Canvas/ScrollContainer/Control"]
visible = false
layout_mode = 2
offset_top = 648.0
offset_right = 296.0
offset_bottom = 712.0
focus_mode = 0
theme_override_fonts/font = ExtResource("5_wfsna")
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = SubResource("StyleBoxTexture_ch6sv")
theme_override_styles/hover = SubResource("StyleBoxTexture_oy6cy")
theme_override_styles/disabled = SubResource("StyleBoxTexture_7x6tl")
icon = ExtResource("13_07yjg")
alignment = 0
expand_icon = true

[node name="delivery_service" type="Button" parent="Canvas/ScrollContainer/Control"]
visible = false
layout_mode = 2
offset_top = 720.0
offset_right = 296.0
offset_bottom = 784.0
focus_mode = 0
theme_override_fonts/font = ExtResource("5_wfsna")
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = SubResource("StyleBoxTexture_ch6sv")
theme_override_styles/hover = SubResource("StyleBoxTexture_oy6cy")
theme_override_styles/disabled = SubResource("StyleBoxTexture_7x6tl")
icon = ExtResource("2_vvn7b")
alignment = 0
expand_icon = true

[node name="wizard" type="Button" parent="Canvas/ScrollContainer/Control"]
visible = false
layout_mode = 2
offset_top = 792.0
offset_right = 296.0
offset_bottom = 856.0
focus_mode = 0
theme_override_fonts/font = ExtResource("5_wfsna")
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = SubResource("StyleBoxTexture_ch6sv")
theme_override_styles/hover = SubResource("StyleBoxTexture_oy6cy")
theme_override_styles/disabled = SubResource("StyleBoxTexture_7x6tl")
icon = ExtResource("2_vvn7b")
alignment = 0
expand_icon = true

[node name="portal" type="Button" parent="Canvas/ScrollContainer/Control"]
visible = false
layout_mode = 2
offset_top = 864.0
offset_right = 296.0
offset_bottom = 928.0
focus_mode = 0
theme_override_fonts/font = ExtResource("5_wfsna")
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = SubResource("StyleBoxTexture_ch6sv")
theme_override_styles/hover = SubResource("StyleBoxTexture_oy6cy")
theme_override_styles/disabled = SubResource("StyleBoxTexture_7x6tl")
icon = ExtResource("2_vvn7b")
alignment = 0
expand_icon = true

[node name="wishing_well" type="Button" parent="Canvas/ScrollContainer/Control"]
visible = false
layout_mode = 2
offset_top = 936.0
offset_right = 296.0
offset_bottom = 1000.0
focus_mode = 0
theme_override_fonts/font = ExtResource("5_wfsna")
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = SubResource("StyleBoxTexture_ch6sv")
theme_override_styles/hover = SubResource("StyleBoxTexture_oy6cy")
theme_override_styles/disabled = SubResource("StyleBoxTexture_7x6tl")
icon = ExtResource("2_vvn7b")
alignment = 0
expand_icon = true

[node name="particle_accelerator" type="Button" parent="Canvas/ScrollContainer/Control"]
visible = false
layout_mode = 2
offset_top = 1008.0
offset_right = 296.0
offset_bottom = 1072.0
focus_mode = 0
theme_override_fonts/font = ExtResource("5_wfsna")
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = SubResource("StyleBoxTexture_ch6sv")
theme_override_styles/hover = SubResource("StyleBoxTexture_oy6cy")
theme_override_styles/disabled = SubResource("StyleBoxTexture_7x6tl")
icon = ExtResource("2_vvn7b")
alignment = 0
expand_icon = true

[node name="terminal" type="Button" parent="Canvas/ScrollContainer/Control"]
visible = false
layout_mode = 2
offset_top = 1080.0
offset_right = 296.0
offset_bottom = 1144.0
focus_mode = 0
theme_override_fonts/font = ExtResource("5_wfsna")
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = SubResource("StyleBoxTexture_ch6sv")
theme_override_styles/hover = SubResource("StyleBoxTexture_oy6cy")
theme_override_styles/disabled = SubResource("StyleBoxTexture_7x6tl")
icon = ExtResource("2_vvn7b")
alignment = 0
expand_icon = true

[node name="Notification" type="RichTextLabel" parent="Canvas"]
z_index = 14
offset_left = 64.0
offset_top = 536.0
offset_right = 384.0
offset_bottom = 592.0
theme_override_fonts/normal_font = ExtResource("5_wfsna")
bbcode_enabled = true
fit_content = true

[node name="ColorRect" type="ColorRect" parent="Canvas/Notification"]
visible = false
z_index = -1
layout_mode = 0
offset_right = 320.0
offset_bottom = 56.0
color = Color(0, 0, 0, 0.407843)

[node name="time" type="RichTextLabel" parent="Canvas"]
offset_left = 8.0
offset_top = 624.0
offset_right = 448.0
offset_bottom = 648.0
theme_override_fonts/normal_font = ExtResource("5_wfsna")
theme_override_font_sizes/normal_font_size = 14
bbcode_enabled = true
text = "Playtime: XXh XXm XXs"

[node name="save_button" type="Button" parent="Canvas"]
offset_left = 5.0
offset_top = 7.0
offset_right = 117.0
offset_bottom = 50.0
text = "SAVE"

[connection signal="pressed" from="Canvas/ClickingRect/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Canvas/ScrollContainer/Control/cursor" to="." method="_on_cursor_pressed"]
[connection signal="pressed" from="Canvas/ScrollContainer/Control/hand" to="." method="_on_hand_btn_pressed"]
[connection signal="pressed" from="Canvas/ScrollContainer/Control/pickaxe" to="." method="_on_pickaxe_btn_pressed"]
[connection signal="pressed" from="Canvas/ScrollContainer/Control/miner" to="." method="_on_miner_btn_pressed"]
[connection signal="pressed" from="Canvas/ScrollContainer/Control/drill" to="." method="_on_drill_btn_pressed"]
[connection signal="pressed" from="Canvas/ScrollContainer/Control/stone_mine" to="." method="_on_stone_mine_pressed"]
[connection signal="pressed" from="Canvas/ScrollContainer/Control/coal_mine" to="." method="_on_coal_mine_pressed"]
[connection signal="pressed" from="Canvas/ScrollContainer/Control/iron_mine" to="." method="_on_iron_mine_pressed"]
[connection signal="pressed" from="Canvas/ScrollContainer/Control/gold_mine" to="." method="_on_gold_mine_pressed"]
[connection signal="pressed" from="Canvas/ScrollContainer/Control/diamond_mine" to="." method="_on_diamond_mine_pressed"]
[connection signal="meta_hover_ended" from="Canvas/Notification" to="." method="_on_notification_meta_hover_ended"]
[connection signal="mouse_exited" from="Canvas/Notification" to="." method="_on_notification_mouse_exited"]
[connection signal="mouse_exited" from="Canvas/Notification/ColorRect" to="." method="_on_color_rect_mouse_exited"]
[connection signal="visibility_changed" from="Canvas/Notification/ColorRect" to="." method="_on_color_rect_visibility_changed"]
[connection signal="pressed" from="Canvas/save_button" to="." method="_on_save_button_pressed"]
